<resources>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDYRW6zI0pSVtpXmsdaxZSp5tQEvHsiAEE</string>
    <string name="app_name">Poliesportivo</string>
    <string name="name">Name</string>
    <string name="permissao_negada">Permission Denied</string>
    <string name="message_permission_denied">To use this app you need to accept the permission:</string>
    <string name="confirm">Confirm</string>
    <string name="phone_invalid">Invalid phone number.</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone Number</string>
    <string name="message_verify_phone">Poliesportivo will send an SMS message to verify your phone number. Enter your area code and phone number.</string>
    <string name="ddd_invalid">Invalid area code</string>
    <string name="msg_verificaremos_numero">We\'ll check the phone number</string>
    <string name="msg_number_correto_edit">Is this number correct or do you want to edit?</string>
    <string name="edit">Edit</string>
    <string name="verify">Verify</string>
    <string name="msg_aguarda_sms">Waiting to automatically detect an SMS sent to</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="invalid_code">Invalid code</string>
    <string name="enterCode">Enter the 6-digit code</string>
    <string name="reenviarCodigo">Resend code in</string>
    <string name="title_activity_usuario">User Info</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="loading">Loading</string>
    <string name="notName">Name not reported</string>
    <string name="notstate">Select your state</string>
    <string name="selectPhoto">Select Profile Photo</string>
    <string name="notConnect">Cannot connect to the internet</string>
    <string name="title_activity_principal">Home</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="gymnasium">Gymnasium</string>
    <string name="map">Map</string>
    <string name="title_activity_mapa_ginasio">Map Gymnasium</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="current_location">Current location</string>
    <string name="available_times">Available Times</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="my">My</string>
    <string name="home">HOME</string>
    <string name="google">Google</string>
    <string name="message_dataGoogle">Do you want to import the data from Google?</string>
    <string name="disconnect">Disconnect</string>
    <string name="syncGoogle">Sync Google</string>
    <string name="no_time_day">No time for the selected day</string>
    <string name="favorite">Add Favorite</string>
</resources>
