<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_Validacao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lfcaplicativos.poliesportivo.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_Validacao_Msg_aguardando_SMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/msg_aguarda_sms"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_Validacao_NumErrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_Validacao_Msg_aguardando_SMS"
                android:layout_centerHorizontal="true"
                android:text="@string/wrong_number"
                android:textAlignment="center"
                android:textColor="@color/caldroid_holo_blue_light"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_Validacao_CodeVerif"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="------"
                android:inputType="number"
                android:maxLength="6"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button_Verificacao_Verifica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorButtonNormal"
                android:onClick="onClick"
                android:ems="10"
                android:text="@string/verify" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>