<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.lfcaplicativos.poliesportivo.Activity.Login">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />


    <ProgressBar
        android:id="@+id/Progress_Login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/Layout_Login_Scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/text_Login_Messagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:text="@string/message_verify_phone"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_Login_Messagem"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/edit_Login_CodArea"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="DDD"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textAlignment="center"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/edit_Login_Telefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/edit_Login_CodArea"
                    android:layout_toRightOf="@+id/edit_Login_CodArea"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="number" />
            </RelativeLayout>


            <ImageView
                android:id="@+id/image_Login_Logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/relativeLayout"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/logo" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>
